一些坑：使用Collections.synchronizedList等工具类将非线程安全类的集合转化为线程安全类
比如Collections.synchronizedList，返回的是List对象！不能让其强转为LinkedLIst、ArrayList等，这些是子类！不能父类转子类的...搞清楚返回的对象是什么，要尝试去读源码！